[project]
name = "my-mcp-server"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for LinkedIn API integration"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "routers"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
